# o-negative

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dinput8.def
src/: common.cpp  common.h  dinput_proxy.cpp
